--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ a:hover {
 
 #bloc-1-hero h1 {
     font-size: 32px;
+    line-height: 1.5;
 }
 
 .navbar {
@@ -584,6 +585,7 @@ a[data-lightbox]:hover img {
     left: 15px;
     right: 15px;
     bottom: 5px;
+    text-align: center;
 }
 
 .close-lightbox {
@@ -705,7 +707,7 @@ p {
 }
 
 .partenaire {
-    max-width: 500px;
+    max-width: 600px;
     margin: auto auto auto auto;
     display: flex;
     justify-content: space-evenly;
@@ -760,8 +762,8 @@ h4 {
 }
 
 .portfolio-row {
-    margin-bottom: 44px;
-    margin-top: 50px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 .avatar {
