--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -303,7 +302,8 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
+    height: 40px;
+    width: 215px;
     margin: 0 5px 0 0;
     display: inline;
 }
@@ -362,6 +362,12 @@ a:hover {
     position: relative;
     z-index: 2;
 }
+
+.image-resize-mode {
+    width: 100px;
+    height: 100px;
+}
+
 
 @media (min-width: 768px) {
     .site-navigation {
@@ -713,12 +719,12 @@ p {
     justify-content: space-evenly;
 }
 
-.partenaire-a {
-    color: rgba(255, 255, 255, .6)!important;
+.partenaire-a, .icon-md {
+    color: #000000!important;
     font-weight: bold;
 }
 
-.partenaire-a:hover {
+.partenaire-a:hover, .icon-md:hover {
     color: white!important;
 }
 
@@ -755,6 +761,10 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+}
+
+.black {
+    color: #000000!important;
 }
 
 .portfolio-thumb {
@@ -1054,12 +1064,12 @@ h4 {
     }
 }
 
-@media (max-width: 400px) {
+/*@media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
     }
-}
+}*/
 
 @media (max-width: 767px) {
     .bloc-mob-center-text {
